--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
             android:noHistory="true"
             >
         </activity>
+        <activity
+            android:name=".StudentActivity"
+            android:label="@string/title_activity_student"
+            >
+        </activity>
     </application>
 
 </manifest>
