feat(GroupsActivity): Implemented groups list functionality.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,11 @@
             android:label="@string/title_activity_student"
             >
         </activity>
+        <activity
+            android:name=".activites.GroupsActivity"
+            android:label="@string/title_activity_students"
+            >
+        </activity>
     </application>
 
 </manifest>
