feat(Common): Implemented mock links from group to student

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,13 +32,14 @@
             >
         </activity>
         <activity
-            android:name=".StudentActivity"
-            android:label="@string/title_activity_student"
+            android:name=".activites.GroupsActivity"
+            android:label="@string/title_activity_groups"
             >
         </activity>
         <activity
-            android:name=".activites.GroupsActivity"
-            android:label="@string/title_activity_students"
+            android:name=".StudentActivity"
+            android:parentActivityName=".activites.GroupsActivity"
+            android:label="@string/title_activity_student"
             >
         </activity>
     </application>
