--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".activites.MainActivity"
             android:label="@string/app_name"
             >
             <intent-filter>
@@ -20,13 +20,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RegistrationActivity"
+            android:name=".activites.RegistrationActivity"
             android:label="@string/title_activity_registration"
-            android:parentActivityName=".LoginActivity"
+            android:parentActivityName=".activites.LoginActivity"
             >
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".activites.LoginActivity"
             android:label="@string/title_activity_login"
             android:noHistory="true"
             >
@@ -37,7 +37,7 @@
             >
         </activity>
         <activity
-            android:name=".StudentActivity"
+            android:name=".activites.StudentActivity"
             android:parentActivityName=".activites.GroupsActivity"
             android:label="@string/title_activity_student"
             >
