--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activites.MainActivity"
-            android:label="@string/app_name"
-            >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,26 +21,19 @@
         <activity
             android:name=".activites.RegistrationActivity"
             android:label="@string/title_activity_registration"
-            android:parentActivityName=".activites.LoginActivity"
-            >
-        </activity>
+            android:parentActivityName=".activites.LoginActivity"></activity>
         <activity
             android:name=".activites.LoginActivity"
             android:label="@string/title_activity_login"
-            android:noHistory="true"
-            >
-        </activity>
+            android:noHistory="true"></activity>
         <activity
             android:name=".activites.GroupsActivity"
-            android:label="@string/title_activity_groups"
-            >
-        </activity>
+            android:label="@string/title_activity_groups"></activity>
         <activity
             android:name=".activites.StudentActivity"
-            android:parentActivityName=".activites.GroupsActivity"
             android:label="@string/title_activity_student"
-            >
-        </activity>
+            android:parentActivityName=".activites.GroupsActivity"></activity>
+        <activity android:name=".activites.AdminActivity"></activity>
     </application>
 
 </manifest>
